--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -25,3 +25,9 @@ header{
 .header-navbar a {
   text-decoration: none;
 }
+
+@media (min-width: 768px){
+  .header-navbar li {
+    margin-right: 25px;
+  }  
+}
