section two and newsletter finished

--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -1,12 +1,19 @@
 .section{
   display: flex;
   flex-direction: column;
-  margin-bottom: 90px;
   padding: 0px 5%;
+  padding-bottom: 90px;
+}
+
+.section-container {
+  flex-direction: row-reverse;
+  margin: 0 auto;
+  padding: 50px 5%;
 }
 
 .section-illustration {
   align-self: center;
+  margin-bottom: 40px;
 }
 
 .section-illustration img {
@@ -19,8 +26,12 @@
 
 .section-details h1 {
   margin-bottom: 25px;
-  font-weight: bold;
   font-size: 1.7rem;
+}
+
+.section-details h2 {
+  margin-bottom: 25px;
+  font-size: 1.2rem;
 }
 
 .section-details p {
@@ -50,12 +61,24 @@
   font-weight: bold;
 }
 
+.section-details-call-to-action {
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
+
+.section-details a {
+  color: var(--Moderate-Cyan);
+  text-decoration: none;
+  border-bottom: 1px solid;
+  padding: 5px;
+  margin: 20px 0 20px 0;
+}
+
 @media (min-width: 768px){
   .section {
     flex-direction: row-reverse;
     max-width: var(--desktop-width);
     margin: 0px auto;
-    padding-top: 50px;
     padding-bottom: 100px;
     align-items: center;
   }
@@ -68,18 +91,24 @@
   .section-details h1 {
     font-size: 2.5rem;
     font-family: var(--font-family);
+  
+  }
+
+  .section-details p {
+    padding: 0;
   }
 
   .section-details input {
     width: 55%;
     margin-right: 10px;
   }
+
   .section-details button {
     width: 30%;
   }
 
   .section-illustration {
     flex: 50%;
-  }
+  }  
 
 }
