--- a/src/components/Newsletter/Newsletter.css
+++ b/src/components/Newsletter/Newsletter.css
@@ -1,10 +1,11 @@
 .newsletter{
   background-color: var(--Desaturated-Blue);
-  padding: 100px 0px;
+  padding: 80px 0px;
   text-align: center;
   color: var(--Light-Grayish-Blue);
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .newsletter h2 {
@@ -17,8 +18,12 @@
   margin-bottom: 20px;
 }
 
+.newsletter form {
+  width: 100%;
+}
+
 .newsletter input {
-  width: 75%;
+  width: 70%;
   border-radius: 3px;
   padding: 10px;
   border: 1px solid var(--Very-Dark-Blue);
@@ -28,7 +33,7 @@
 }
 
 .newsletter button {
-  width: 80%;
+  width: 70%;
   background-color: var(--Bright-Blue);
   padding: 10px;
   color: var(--Light-Grayish-Blue);
@@ -57,7 +62,7 @@
   }
 
   .newsletter div p {
-    max-width: 500px;
+    max-width: 540px;
   }
 
   .newsletter form {
